fixed #13 - position colorpicker above lower edge of window is too small

--- a/src/app/css/_main.scss
+++ b/src/app/css/_main.scss
@@ -39,5 +39,5 @@ body {
 .colorpicker {
     z-index: 10;
     position: absolute;
-    left: 12%;
+    left: 25%;
 }
